--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <title>Chen Li</title>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@700&display=swap" rel="stylesheet">
@@ -9,12 +10,13 @@
   <link rel="stylesheet" media="screen and (min-width: 820px)" href="widescreen.css">
   <link rel="stylesheet" media="screen and (min-width: 650px) and (max-width: 820px)" href="midscreen.css">
   <link rel="stylesheet" media="screen and (max-width: 650px)" href="smallscreen.css">
+  <script src="script.js"></script>
 </head>
-<body>
+<body onload="loadComments()">
   <div id="main">
-    <div id="head">Chen Li</div>
-    <div class="content">
-      <div class="text-pic section">
+    <div class="panel" id="head">Chen Li</div>
+    <div class="panel" id="content">
+      <div class="section" id="text-pic">
         <div class="subhead">Introduction</div>
         <img src="images/lc.jpeg" alt="profile pic.">
         <p>
@@ -29,14 +31,27 @@
         </p>
       </div><!--end text-pic section-->
 
-      <div class="facts section">
+      <div class="section" id="facts">
         <div class="subhead">Facts about me</div>
-        <div class="single-fact">My Chinese name is exactly the same as an actor, <a href="https://zh.wikipedia.org/wiki/李晨_(演员)">李晨</a>, in China. I've been regarded as a boy all the time.</div>
-        <div class="single-fact">I'm watching <em><a href="https://en.wikipedia.org/wiki/Friends">Friends</a></em> these days. I finished the 10 seasons within a month even if I'm working 997 this summer. My favorite character is Rachel Green.<div>
-        <div class="single-fact last">Not familiar with design, I kind of referenced the <a href="https://www.cmu.edu/brand/brand-guidelines/web.html">CMU Brand</a> when working on this page. I'll go there to pursue my master's degree next year.</div>
+        <div class="single fact">My Chinese name is exactly the same as an actor, <a href="https://zh.wikipedia.org/wiki/李晨_(演员)">李晨</a>, in China. I've been regarded as a boy all the time.</div>
+        <div class="single fact">I'm watching <em><a href="https://en.wikipedia.org/wiki/Friends">Friends</a></em> these days. I finished the 10 seasons within a month even if I'm working 997 this summer. My favorite character is Rachel Green.</div>
+        <div class="single fact" id="last">Not familiar with design, I kind of referenced the <a href="https://www.cmu.edu/brand/brand-guidelines/web.html">CMU Brand</a> when working on this page. I'll go there to pursue my master's degree next year.</div>
       </div><!--end facts section-->
     </div><!--end content-->
 
+    <div class="panel" id="add-comments">
+      <div class="subhead">Add a Comment</div>
+      Please leave your message here &#x1F970
+      <textarea id="input-comment" name="comment" rows="4" form="commentform"></textarea>
+      <form id="commentform" action="/new-comment" method="post">
+        <input class="btn" name="action" type="submit" value="Submit Comment"/> 
+      </form>
+    </div><!--end add comments-->
+
+    <div class="panel" id="all-comments">
+      <div class="subhead">All Comments</div>
+      <div id="list-comments"></div>
+    </div><!--end all comments-->
   </div><!--end main-->
 </body>
 </html>
